Changes in version: rpsychi_0.4 (2011-09-07)
  o Corrected fatal errors in version 0.3 relating to aggregate()


Changes in version: rpsychi_0.3 (2011-09-06)
  o formatted.R, formatted.Rd: add new function for printing output
  o dep.t.test.R: correction of a bug
  o dep.oneway.R: correction of a bug
  o Did not depend the library(doBy)


Changes in version: rpsychi_0.2 (2010-02-09)
  o dep.t.test.Rd: correction of a bug in the example section
  o ind.oneway.second.Rd, ind.twoway.second.Rd, rpsychi-package.Rd: update the reference to Cohen B
  o ind.twoway.R, ind.twoway.Rd: add new function for two-way analysis of variance using individual data


Changes in version: rpsychi_0.1 (2010-02-07)
  o dep.t.test.R: correction of a bug
  o ind.twoway.second.R, ind.twoway.second.Rd, power.f2.R, power.f2.Rd: add new function for two-way analysis of variance using published work
