@@ -1,27 +1,15 @@
 Package: rpsychi
 Title: Statistics for psychiatric research
-Version: 0.4
-Date: 2011-09-07
+Version: 0.6
+Date: 2011-10-31
 Author: Yasuyuki Okumura <yokumura@blue.zero.jp>
 Maintainer: Yasuyuki Okumura <yokumura@blue.zero.jp>
 Depends: gtools
-Description: The rpsychi offers a number of functions for psychiatry,
-        psychiatric nursing, clinical psychology. Functions are
-        primarily for statistical significance testing using published
-        work. For example, you can conduct a factorial analysis of
-        variance (ANOVA), which requires only the mean, standard
-        deviation, and sample size for each cell, rather than the
-        individual data. This package covers fundamental statistical
-        tests such as t-test, chi-square test, analysis of variance,
-        and multiple regression analysis. With some exceptions, you can
-        obtain effect size and its confidence interval. These functions
-        help you to obtain effect size from published work, and then to
-        conduct a priori power analysis or meta-analysis, even if a
-        researcher do not report effect size in a published work.
+Description: The rpsychi offers a number of functions for psychiatry, psychiatric nursing, clinical psychology. Functions are primarily for statistical significance testing using published work. For example, you can conduct a factorial analysis of variance (ANOVA), which requires only the mean, standard deviation, and sample size for each cell, rather than the individual data. This package covers fundamental statistical tests such as t-test, chi-square test, analysis of variance, and multiple regression analysis. With some exceptions, you can obtain effect size and its confidence interval. These functions help you to obtain effect size from published work, and then to conduct a priori power analysis or meta-analysis, even if a researcher do not report effect size in a published work.
 License: GPL (>= 2)
 URL: http://blue.zero.jp/yokumura/
 LazyLoad: yes
 Encoding: UTF-8
-Packaged: 2011-09-07 10:41:27 UTC; Yasuyuki Okumura
+Packaged: 2011-11-03 00:22:32 UTC; Yasuyuki Okumura
 Repository: CRAN
-Date/Publication: 2011-09-07 13:07:27
+Date/Publication: 2011-11-03 06:50:33
