@@ -1,5 +1,6 @@
-7ce729cfc81e406a5c998ea1bf99c07f *DESCRIPTION
-1525aabf10e7da062cf167db4837b325 *NEWS
+0ede03e3e95a739504de9706fd824cf1 *DESCRIPTION
+e7007e0cee92974b92d901209ac0f608 *NAMESPACE
+0e158e14a29ea72d29acb6cd0b04b807 *NEWS
 bc821e650439b49755691760af82a708 *R/FNONCT.R
 9390ae64806fa19a0cd42d1a5e2a048e *R/dep.oneway.R
 0ec66411c3107522151eb429365c29e7 *R/dep.oneway.second.R
@@ -9,10 +10,10 @@ bc821e650439b49755691760af82a708 *R/FNONCT.R
 70267c018c33a382beb18679804feac8 *R/groupSummary.R
 502d0b2fcb7fc058addddc3c87fc7d8c *R/ind.oneway.R
 9d03df2174b0b03215de9fc68e5f7100 *R/ind.oneway.second.R
-3797a220ce43d951bdbc92bc69a555e8 *R/ind.prop.R
-0b99b274d5e6193c1cd363a3c8f388fc *R/ind.prop.second.R
-b4b7b3cbd8235a821ea338b3aff99f6e *R/ind.t.test.R
-c71983b9d42610ea6e6c46027cab37d5 *R/ind.t.test.second.R
+b939c39631dc926574f2c0237f555ddb *R/ind.prop.R
+4c81a132667e728566452c4d84cc1952 *R/ind.prop.second.R
+6233754a8f03280d404465f786cc9151 *R/ind.t.test.R
+6e9a610fb950b11c49cde7ba3a9908b2 *R/ind.t.test.second.R
 8d0c32f87fd6f3b6344829f771507370 *R/ind.twoway.R
 19414d665457a54c1d7c33a2fff30bc0 *R/ind.twoway.second.R
 c651049f04901a51393335ced4e20836 *R/lower2R.R
@@ -39,31 +40,31 @@ c273a58fd35f4c82e3cb7ae9bb15a36b *R/zero.r.test.R
 cdbb6e880d90d711ee163d6e02bd70f1 *R/zero.r.test.second.R
 e289bcbbc43d27fc25e32675ce51a9f0 *man/FNONCT.Rd
 c5b444ad82b0f916a1c3cc3eda4de608 *man/dep.oneway.Rd
-864938ac5b6241e65f859499894fb82b *man/dep.oneway.second.Rd
+1bcbc571a4ddaf1db8601bafaa0b8a16 *man/dep.oneway.second.Rd
 383118babc08b40e07ff6f0e1572aa0d *man/dep.t.test.Rd
 49157ce873e889272a69ba2521a1828e *man/dep.t.test.second.Rd
 4d2941f26c8c2dd13af19346b68e90c9 *man/formatted.Rd
 5fbffb01e56c1d5d480eb5cc4f4e664a *man/groupSummary.Rd
 f36ba0c1fe23f22a4c66290cf6a80b4d *man/ind.oneway.Rd
 7b3ff8275db92188ceb2a208ad002c08 *man/ind.oneway.second.Rd
-4f0073a900370fff5de694d8b342a1d9 *man/ind.prop.Rd
-db7f63da67b62c0745ee0ba1499bc934 *man/ind.prop.second.Rd
-0beaf1cafe35a58ce61f0b35fe3c3742 *man/ind.t.test.Rd
-3f4c54f316c8aab2f724eaa4ffe45683 *man/ind.t.test.second.Rd
+31356c4a5da371defec40c46361465d9 *man/ind.prop.Rd
+6e001431e31f28f5bff25856e0962897 *man/ind.prop.second.Rd
+1ff5093cff2017a155ececad522a0756 *man/ind.t.test.Rd
+8b3205d0f63a2ea097289ea5b3235eaf *man/ind.t.test.second.Rd
 5bf4e0e2bbe90eeaff2bd1be6e7138ad *man/ind.twoway.Rd
 b129e28f6fa60797f2cf2d010136e72c *man/ind.twoway.second.Rd
 bc48df31a6319593e26b4d2191698367 *man/lower2R.Rd
 19330dccb2c06a16f39196a87756bdbf *man/md.pattern2.Rd
 1f021866370a16ba833fb75c26f3d495 *man/multreg.Rd
-6d6317b5b663d81cafc719f003e62400 *man/multreg.second.Rd
+b22011dba646037c72f81837f9039844 *man/multreg.second.Rd
 a7d312b1ba25f3faa16f0ce0f73e262f *man/power.f.Rd
 66061bbcfe9d47a09a64d1aaf2676aae *man/power.f2.Rd
 1c3a4c815a2c765ad4b5a98acac44fef *man/power.multi.Rd
 aebe288e6f1f107ea691a696b4035e07 *man/power.prop.Rd
 90a5adedd8cfa6d837a2142a6c200577 *man/power.r.Rd
 dcb63a9780de30893f8b18353afebb0b *man/power.t.Rd
-1a10bfcab1cb478be925d9484fc961b1 *man/r2cov.Rd
-4349de101debd1bd72eafa267831865c *man/rpsychi-package.Rd
+fb5e59b7dda3cd5700e11ef27f2a47db *man/r2cov.Rd
+6b9fcfc1907004ac17b910950435881e *man/rpsychi-package.Rd
 4a47671ac42ab45c76b61b1cd7913a45 *man/samplesize.d.Rd
 4e78ee44a281ac613db1ca248837916d *man/samplesize.etasq.Rd
 9fbaa3ec3782fe0fb18237a61b029436 *man/samplesize.h.Rd
@@ -75,4 +76,4 @@ ef31e771a40aec9435d73fbad0bb54d0 *man/ssd.Rd
 667f3ef85721d563f26aa5da53a7f0be *man/svar.Rd
 9c48d885f738d2005a4801b2723cece8 *man/zero.r.test.Rd
 8abe94888edd1d16f3551ca421d3d76b *man/zero.r.test.second.Rd
-c360e7b462e82b797436c137059d933f *rpsychi-Ex.R
+b48abc1f8e1e45a07d9067fe6aa8f72f *rpsychi-Ex.R
