@@ -8,7 +8,7 @@
 }
 \usage{
 ind.t.test.second(m, sd, n, 
-        unbiased = TRUE, sig.level = 0.05, digits = 3)
+        unbiased = TRUE, correct=TRUE, sig.level = 0.05, digits = 3)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -16,6 +16,7 @@ ind.t.test.second(m, sd, n,
   \item{sd}{a numeric vector contains the sample/unbiased standard deviations (length(\code{sd}) = 2)}
   \item{n}{a numeric contains the sample size (length(\code{n}) = 2)}
   \item{unbiased}{\code{sd} contains unbiased standard deviations (\code{unbiased} = TRUE, default) or sample standard deviations (\code{unbiased} = FALSE)}
+  \item{correct}{a logical indicating whether to compute an unbiased standardized mean difference (\eqn{delta}) or not (\code{correct} = TRUE)}
   \item{sig.level}{a numeric contains the significance level (default 0.05)}
   \item{digits}{the specified number of decimal places (default 3)}
 }
@@ -64,8 +65,12 @@ dat <- data.frame(y = c(9,12,13,15,16,8,12,11,10,14),
                   )
 ind.t.test.second(m = tapply(dat$y, dat$x, mean),
                   sd = tapply(dat$y, dat$x, sd),
-                  n = tapply(dat$y, dat$x, length)
+                  n = tapply(dat$y, dat$x, length), correct=FALSE
                   )
+ind.t.test.second(m = tapply(dat$y, dat$x, mean),
+                  sd = tapply(dat$y, dat$x, sd),
+                  n = tapply(dat$y, dat$x, length), correct=TRUE
+                  )     #approximate unbiased estimator of delta
 }
 
 \keyword{design}
