@@ -52,11 +52,12 @@
 ##data(iris) 
 x <- iris[,1:4] 
 cov(x)
-r2cov(sd(x), cor(x)) 
+r2cov(apply(x, 2, sd), cor(x)) 
+
 
 ##Toyoda (1998) p.34 
 r2cov(sd = sqrt(c(.862, 1.089, 0.606)), 
-      R = lower2R(c(.505, -0.077, -.233)))         
+      R = lower2R(c(.505, -0.077, -.233)))
 } 
 
 \keyword{array}
